# cpp-cmake-gtest-starter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  libcode.cpp
src/test/: CMakeLists.txt  test.cpp
